Fix header alignment

--- a/_src/scss/_header.scss
+++ b/_src/scss/_header.scss
@@ -183,6 +183,7 @@
 }
 
 .mf-hidden {
+  position: absolute;
+  top: -100%;
   font-size: 0;
-  line-height: 0;
 }
